# printing-press

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: check.yml
migrations/: 001_create_subscribers.sql  002_create_email_sends.sql  003_create_logins.sql  004_add_email_queue_columns.sql  005_create_email_suppressions.sql  005_create_mail_sends.sql  006_add_login_attempts.sql  007_add_preview_text.sql
src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
src/cli/: client.rs  config.rs  keystore.rs  main.rs
src/cli/commands/: import.rs  login.rs  mail.rs  mod.rs  publish.rs
src/models/: email_send.rs  email_suppression.rs  login.rs  mail_send.rs  mod.rs  subscriber.rs
src/routes/: emails.rs  health.rs  import.rs  mail.rs  mod.rs  publish.rs  stats.rs  subscribers.rs  unsubscribe.rs  verify.rs
src/services/: dns.rs  email_service.rs  letter_service.rs  lob_service.rs  login_service.rs  mod.rs  pdf_service.rs  queue_worker.rs  stripe_service.rs  subscriber_service.rs  suppression_sync.rs
src/templates/: confirmation.html  letter.html  mod.rs  new_subscriber.html  newsletter.html
tests/: email_test.rs  health_test.rs  publish_test.rs  stats_test.rs  subscriber_test.rs  unsubscribe_test.rs  verify_test.rs
tests/common/: mod.rs
